# OpenEnv-Hackathon

./: .gitignore  Dockerfile  GRADER_FIX_SUMMARY.md  README.md  __init__.py  constraints.py  emailer.py  inference.py  models.py  openenv.yaml  requirements.txt
env/: environment.py  export.py  models.py  tasks.py
school_env/school_env/: .gitignore  Dockerfile  README.md  app.py  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_check.py  test_full.py  test_generator.py  test_inference.py  test_master.csv  test_openenv.py  test_stdout_format.py  test_submission.py  verify_format.py
school_env/school_env/env/: models.py  reward.py  tasks.py
school_env/school_env/server/: app.py
school_env/school_env/static/: generator.html  index.html
school_env/school_env/test_faculty_csvs/: Dr_Sharma_timetable.csv  Ms_Patel_timetable.csv  Prof_Mehta_timetable.csv
