[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openenv-school-timetable"
version = "1.0.0"
description = "School Timetable Scheduling — OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.1",
    "pydantic>=2.0,<3.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=13.0",
    "httpx>=0.27",
    "openai>=1.0,<3.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]
